Fix: loading screen not centered

--- a/frontend/src/assets/styles/baseStyle.scss
+++ b/frontend/src/assets/styles/baseStyle.scss
@@ -3,7 +3,7 @@
 
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif !important;
     font-size  : 16px;
     color      : $neutral-color;
     height     : 100%;
